	  "excluded from select-all"

	* src/backend/file/io-example-account.[ch]: add a flag that signifies
	  that an account-tree should start selected.
	* src/gnome/druid-hierarchy.c: when loading the example accounts, go
	  through the list and 'select' those that are marked as "start selected"
	* accounts/C/acctchrt_common.gnucash-xea: mark this account tree as
	  "start selected"
	
2003-01-04  David Hampton  <hampton@employees.org>

	* src/backend/file/gnc-account-xml-v2.c: 
	* src/backend/file/gnc-book-xml-v2.c: 
	* src/backend/file/io-gncxml-v2.c: 
	* src/backend/file/io-utils.c:
	* src/backend/file/test/test-xml-account.c: Don't export lots.

	* src/engine/gnc-session.c (gnc_session_destroy): Don't clear the
	current_session global unless the actual current session is being
	destroyed. 101707.

	* src/backend/file/io-gncxml-v2.c: Pipe the output through zlib if
	the user requested compression. This request is either setting a
	option in the preferences (for all files), or naming the
	particular data file with a .gz extension. #88509

	* src/backend/file/gnc-backend-file.c:
	* src/gnome/top-level.c:
	* src/app-utils/prefs.scm: Create a 'file compression' option and
	pass the data into the backend.

2003-01-04  Derek Atkkins  <derek@ihtfp.com>

	* add a set of business accounts to the setup druid
	* fix the full and common accounts to remove the (wrong) "Accounts Payable"
	  liability account.

	* src/engine/Transaction.[ch]: add TRANS_NOTES and supporting routines
	  to enable searching for notes.

	* src/gnome/dialog-find-transactions.c: search on NOTES
	  add code to prevent searching on template-txn accounts so SXes don't
	  show up in find results.

	* src/register/ledger-core/*: gnc_table_layout_get_cell() doesn't
	  look at the current cursor, so the multi-currency code was acting
	  all the time, instead of only in registers that needed to be corrected.
	  Fix the code to only apply the multi-currency changes to the correct